
*** General ***

* Timeouts for Isabelle/ML tools are subject to system option
"timeout_scale" --- this already used for the overall session build
process before, and allows to adapt to slow machines. The underlying
Timeout.apply in Isabelle/ML treats an original timeout specification 0
as no timeout; before it meant immediate timeout. Rare INCOMPATIBILITY
in boundary cases.


*** Document preparation ***

* Improved LaTeX typesetting of \<open>...\<close> using \guilsinglleft ...
\guilsinglright. INCOMPATIBILITY, need to use \usepackage[T1]{fontenc}
(which is now also the default in "isabelle mkroot").


*** HOL ***

* Theory Multiset: dedicated predicate "multiset" is gone, use
explict expression instead.  Minor INCOMPATIBILITY.

* Theory Multiset: consolidated abbreviations Mempty, Melem, not_Melem
to empty_mset, member_mset, not_member_mset respectively.  Minor
INCOMPATIBILITY.

* Theory Multiset: consolidated operation and fact names:
    inf_subset_mset ~> inter_mset
    sup_subset_mset ~> union_mset
    multiset_inter_def ~> inter_mset_def
    sup_subset_mset_def ~> union_mset_def
    multiset_inter_count ~> count_inter_mset
    sup_subset_mset_count ~> count_union_mset

* Theory Multiset: syntax precendence for membership operations has been
adjusted to match the corresponding precendences on sets.  Rare
INCOMPATIBILITY.

* HOL-Analysis/HOL-Probability: indexed products of discrete
distributions, negative binomial distribution, Hoeffding's inequality,
Chernoff bounds, Cauchy–Schwarz inequality for nn_integral, and some
more small lemmas. Some theorems that were stated awkwardly before were
corrected. Minor INCOMPATIBILITY.

* Theory "Permutation" in HOL-Library has been renamed to the more
specific "List_Permutation".  Note that most notions from that
theory are already present in theory "Permutations".  INCOMPATIBILITY.

* Lemma "permutes_induct" has been given named premises.
INCOMPATIBILITY.
